--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,9 @@ POSTGRES_PORT=
 POSTGRES_DATABASE_NAME=
 POSTGRES_DATABASE_USER=
 POSTGRES_DATABASE_PASSWORD=
-JWT_EXPIRATION=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+JWT_EXPIRATION_TOKEN=
+JWT_EXPIRATION_REFRESH=
 JWT_SECRET=
