testing grpc endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 API_PORT=
+GRPC_PORT=
 API_VERSION=
 SQLITE_DATASOURCE=
 POSTGRES_HOST=
@@ -9,6 +10,8 @@ POSTGRES_DATABASE_PASSWORD=
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
+REDIS_DB=
+JWT_BLACKLIST=
 JWT_EXPIRATION_TOKEN=
 JWT_EXPIRATION_REFRESH=
 JWT_SECRET=
