Add roles in creation user, Add .env variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+ENVIRONMENT=
 API_PORT=
 GRPC_PORT=
 API_VERSION=
@@ -11,7 +12,14 @@ REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
 REDIS_DB=
-JWT_BLACKLIST=
-JWT_EXPIRATION_TOKEN=
+REDIS_JWT_SESSION_LIST=
+REDIS_JWT_BLACKLIST=
+JWT_TYPE_ACCESS=
+JWT_TYPE_REFRESH=
+JWT_EXPIRATION_ACCESS=
 JWT_EXPIRATION_REFRESH=
 JWT_SECRET=
+JWT_ISSUER=
+JWT_AUDIENCE=
+SMTP_ORIGIN_EMAIL=
+SMTP_ORIGIN_PASSWORD=
