--- a/web/package.json
+++ b/web/package.json
@@ -9,21 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.34.2",
-    "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "react-hook-form": "^7.38.0",
+    "react-router-dom": "^6.4.2",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@types/node": "^18.7.4",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/node": "^18.11.5",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
-    "@vitejs/plugin-react": "^2.0.1",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "@vitejs/plugin-react": "^2.1.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vite-plugin-pwa": "^0.13.1"
   }
 }
